--- a/Projekt/Leczenie.html
+++ b/Projekt/Leczenie.html
@@ -4,27 +4,111 @@
     <meta charset="utf-8">
     <title>Leczenie</title>
     <link href="CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="CSS/leczenieStyle.css" rel="stylesheet" type="text/css">
     <link href="CSS/stopka.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="to_beowe">
-        <div class="STRONA-GWNA"><a href="index.html">STRONA GŁÓWNA</a></div>
-        <div class="O-CHOROBIE"><a href="O_Chorobie.html">O CHOROBIE</a></div>
-        <div class="list">
-            <div class="Zaznaczenie">DLA PACJENTA <div class="trojkatDoRozwijania"></div></div> 
-            
-            <div class="hover-list">
-                <div>
-                    <a href="Leczenie.html">LECZENIE</a>
-                </div>
-                <div>
-                    <a href="Materialy_Edukacyjne.html">MATERIAŁY EDUKACYJNE</a>
-                </div>
-            </div>
-        </div>   
-        <div class="SPECJALICI"><a href="">SPECJALICI</a></div>
-        <div class="HISTORIE-PACJENTW"><a href="">HISTORIE PACJENTÓW</a></div>
+      <div class="NavBox">
+        <ul>
+          <li><a href="index.html">STRONA GŁÓWNA</a></li>
+          <li><a href="O_Chorobie.html">O CHOROBIE</a></li>
+          <li><div class="Zaznaczenie">DLA PACJENTA</div></li>
+          <li><a href="">SPECJALICI</a></li>
+          <li><a href="">HISTORIE PACJENTÓW</a></li>
+        </ul>
+      </div>
 
-    </div> 
+      <div class="ImgBox-1">
+        <img src="img/Rectangle-7.png">
+      </div>
+
+      <div class="ImgBox-2">
+        <img src="img/Sax_Hero_Setting_Office_Global_Female_1_Sarah.png">
+        <img src="img/Rectangle-17.png">
+        <img src="img/Rectangle-17.png">
+      </div>
+
+      <div class="TextBox-1">
+        <h2>Leczenie</h2>
+        <h4>
+          Nadwaga i otyłość są spowodowane wieloma czynnikami indywidualnymi oraz środowiskowymi, 
+          dlatego trudno znaleźć jedną metodę leczenia, która będzie skuteczna w przypadku wszystkich chorych. 
+          Skuteczne, nowoczesne rozwiązanie terapeutyczne powinno się opierać przede wszystkim na wytworzeniu 
+          ujemnego bilansu energetycznego poprzez zastosowanie diety niskoenergetycznej i zwiększeniu aktywności fizycznej.
+        </h4>
+        <p>Leczenie zachowawcze</p>
+        Prawidłową ilość kalorii, które może dziennie zjadać konkretna osoba z nadwagą lub otyłością, aby uzyskać korzystny efekt leczniczy powinien ustalić lekarz 
+        w porozumieniu z dietetykiem. To samo dotyczy aktywności ruchowej. Jej rodzaj i "dawkowanie" powinny być dopasowane do stanu zdrowia, kondycji fizycznej 
+        i stopnia zaawansowania otyłości u każdego chorego oddzielnie. Takie zalecenia również powinien ustalić lekarz wspólnie z fizjoterapeutą.
+        <p>Otyłość to choroba i trzeba ją leczyć!</p>
+      </div>
+
+      <div class="ImgBox-3">
+        <img src="img/shutterstock_1256.png"></img>
+      </div>
+      <div class="ImgBox-4">
+        <img src="img/shutterstock_6916.png"></img>
+      </div>
+      <div class="ImgBox-5">
+        <img src="img/shutterstock_4089.png"></img>
+      </div>
+      <div class="ImgBox-6">
+        <img src="img/shutterstock_6916.png"></img>
+      </div>
+      <div class="ImgBox-7">
+        <img src="img/shutterstock_6916.png"></img>
+      </div>
+
+      <div class="TextBox-2">
+        <p>Leczenie farmakologiczne</p>
+        Niestety, przy zastosowaniu podstawowych zaleceń dotyczących modyfikacji stylu życia, cel terapeutyczny osiągamy tylko u niewielkiej grupy pacjentów.
+        Pod opieką lekarza, terapię niefarmakologiczną pacjenta można wspomóc wybranymi, skutecznymi lekami. Obecnie na polskim rynku mamy dostępne
+        trzy leki ułatwiające redukcję masy ciała.
+        <li>Pierwszy to inhibitor lipaz, hamujący wchłanianie tłuszczu z przewodu pokarmowego.</li>
+        <li>Drugi to połączenie chlorowodorku bupropionu z chlorowodorkiem naltreksonu, które działając na ośrodkowy układ nerwowy, zwiększa uczucie sytości oraz hamuje apetyt. </li>
+        <li>Trzeci – długo wyczekiwany lek z grupy analogów glukagonopodobnego peptydu-1 (GLP-1) – 
+          Liraglutyd, który nie tylko ułatwia redukcję masy ciała, ale również koryguje towarzyszące chorobie zaburzenia metaboliczne.</li>
+      </div>
+
+      <div class="ImgBox-8">
+        <img src="img/Sax_Hero_Setting_Office_Global_Female_1_Sarah_FIN.png">
+      </div>
+
+      <div class="TextBox-1">
+        <p>Leczenie chirurgiczne</p>
+        Chirurgia bariatryczna to metoda leczenia, którą stosuje się u chorych z zaawansowaną otyłością. 
+        Do operacji kwalifikowani są chorzy na otyłość III stopnia (BMI 40+) lub otyłość II stopnia (BMI 35,0 – 39,9), 
+        u których doszło już do powikłań choroby otyłości, np. cukrzycy typu 2, nadciśnienia tętniczego lub choroby zwyrodnieniowej stawów. 
+        <br>
+        Obecnie w Polsce wykonuje się trzy rodzaje operacji bariatrycznych - rękawową resekcję żołądka (tzw. sleeve), by-pass żołądkowy 
+        (tzw. gastric by-pass i jego odmianę mini gastric by-pass) oraz - coraz rzadziej - założenie opaski żołądkowej. 
+        Celem każdej z tych operacji jest nie tylko ograniczenie objętości żołądka, aby chory mógł spożywać mniejsze porcje, 
+        ale przede wszystkim wyłączenie z działania tej części żołądka, w której produkowana jest grelina, czyli tzw. hormon głodu. 
+        Wszystkie trzy zabiegi są refundowane przez NFZ.
+        <p>Zabiegi wyszczuplające to nie chirurgia bariatryczna!</p>
+        Lipo-suction, czyli odsysanie tłuszczu, GUAM, masaż limfatyczny, odchudzanie termiczne GOLF 
+        i inne zabiegi przyczyniają się wprawdzie do redukcji tkanki tłuszczowej, ale sprawdzają się głównie przy nadwadze, 
+        bo ich zadaniem jest wymodelowanie sylwetki, ujędrnienie mięśni, uelastycznienie skóry, a nie leczenie nadwagi i otyłości.
+      </div>
+
+      <div class="ImgBox-9">
+        <img src="img/Rectangle-15.png">
+      </div>
+      <div class="ImgBox-10">
+        <img src="img/Rectangle-17.png">
+      </div>
+      </div>
+      <div class="Stopka">
+        <div class="napisInicjatorzy">Inicjatorzy:</div>
+        <div class="Inicjatorzy-Img">
+          <img src="img/PTKD logo_NOWE_tiff.png">
+        </div>
+        <div class="napisMecenas">Mecenas kampanii:</div>
+        <div class="Mecenas-kampanii-Img">
+          <img src="img/novo-nordisk.png">
+        </div>
+      </div>
   </body>
 </html>
