--- a/Projekt/Materialy_Edukacyjne.html
+++ b/Projekt/Materialy_Edukacyjne.html
@@ -4,27 +4,134 @@
     <meta charset="utf-8">
     <title>Materiały Edukacyjne</title>
     <link href="CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="CSS/materialyEduStyle.css" rel="stylesheet" type="text/css">
     <link href="CSS/stopka.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="to_beowe">
-        <div class="STRONA-GWNA"><a href="index.html">STRONA GŁÓWNA</a></div>
-        <div class="O-CHOROBIE"><a href="O_Chorobie.html">O CHOROBIE</a></div>
-        <div class="list">
-            <div class="Zaznaczenie">DLA PACJENTA <div class="trojkatDoRozwijania"></div></div> 
-            
-            <div class="hover-list">
-                <div>
-                    <a href="Leczenie.html">LECZENIE</a>
-                </div>
-                <div>
-                    <a href="Materialy_Edukacyjne.html">MATERIAŁY EDUKACYJNE</a>
-                </div>
-            </div>
-        </div>   
-        <div class="SPECJALICI"><a href="">SPECJALICI</a></div>
-        <div class="HISTORIE-PACJENTW"><a href="">HISTORIE PACJENTÓW</a></div>
+      <div class="NavBox">
+        <ul>
+          <li><a href="index.html">STRONA GŁÓWNA</a></li>
+          <li><a href="O_Chorobie.html">O CHOROBIE</a></li>
+          <li><div class="Zaznaczenie">DLA PACJENTA</div></li>
+          <li><a href="">SPECJALICI</a></li>
+          <li><a href="">HISTORIE PACJENTÓW</a></li>
+        </ul>
+      </div>
 
+      <div class="napisMaterialyEdu">MATERIAŁY EDUKACYJNE</div>
+
+      <div class="ImgBox">
+          <div class="ImgBox__path">
+            <div class="ImgBox__path--napis"><strong>1.</strong><br><br>OKREŚLANIE CELÓW DŁUGOTERMINOWYCH</div>
+          </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>2.</strong><br><br>COŚ TAM COŚ TAM</div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>3.</strong><br><br>WSKAZÓWKI DOTYCZĄCE WPROWADZANIA WŁAŚCIWYCH</div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>4.</strong><br><br>MÓJ PLAN ŻYWIENIOWY</div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>5.</strong><br><br>MÓJ PLAN ŻYWIENIOWY KARTA</div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>6.</strong><br><br>BROSZURA AKTYWNOŚĆ FIZYCZNA
+            1 ST ZAAWANSOWANIA
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>7.</strong><br><br>BROSZURA AKTYWNOŚĆ FIZYCZNA
+            2 ST ZAAWANSOWANIA
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>8.</strong><br><br>BROSZURA AKTYWNOŚĆ FIZYCZNA
+            3 ST ZAAWANSOWANIA
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>9.</strong><br><br>SEKRETEM ROZMIARU PORCJI JEST DŁOŃ
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>10.</strong><br><br>WSKAZÓWKI DOTYCZĄCE ŚWIADOMEGO JEDZENIA
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>11.</strong><br><br>ZMIANY W STYLU ŻYCIA
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>12.</strong><br><br>CZYNNIKI POWODUJĄCE OBJADANIE SIĘ
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>13.</strong><br><br>RADZENIE SOBIE
+            Z CHWILAMI SŁABOŚCI            
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>14.</strong><br><br>LISTA ZAMIENNIKÓW ŻYWIENIOWYCH
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>15.</strong><br><br>PORADY I WSKAZÓWKI
+            </div>
+        </div>
+      </div>
+
+      <div class="ImgBox">
+        <div class="ImgBox__path">
+          <div class="ImgBox__path--napis"><strong>16.</strong><br><br>RADZENIE SOBIE Z NIEODPOWIEDNIMI KOMENTARZAMI
+            </div>
+        </div>
+      </div>
     </div> 
   </body>
 </html>
