--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -6,16 +6,22 @@
     <link href="CSS/style.css" rel="stylesheet" type="text/css">
     <link href="CSS/indexStyle.css" rel="stylesheet" type="text/css">
     <link href="CSS/stopka.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <script src="JS/function.js"></script>
   </head>
   <body>
     <div class="to_beowe">  
       <div class="NavBox">
         <ul>
-          <li><a href="index.html">STRONA GŁÓWNA</a></li>
+          <li><div class="Zaznaczenie">STRONA GŁÓWNA</div></li>
           <li><a href="O_Chorobie.html">O CHOROBIE</a></li>
-          <li><div class="Zaznaczenie">DLA PACJENTA</div></li>
-          <li><a href="">SPECJALICI</a></li>
+          <li><a href="Dla_Pacjenta.html"></a>DLA PACJENTA
+            <ol>
+              <li><a href="Leczenie.html">LECZENIE</a></li>
+              <li><a href="Materialy_Edukacyjne.html">MATERIAŁY EDUKACYJNE</a></li>
+          </ol>
+          </li>
+          <li><a href="Specjalisci.html">SPECJALICI</a></li>
           <li><a href="">HISTORIE PACJENTÓW</a></li>
         </ul>
       </div>
