--- a/Projekt/Leczenie.html
+++ b/Projekt/Leczenie.html
@@ -14,8 +14,13 @@
         <ul>
           <li><a href="index.html">STRONA GŁÓWNA</a></li>
           <li><a href="O_Chorobie.html">O CHOROBIE</a></li>
-          <li><div class="Zaznaczenie">DLA PACJENTA</div></li>
-          <li><a href="">SPECJALICI</a></li>
+          <li><div class="Zaznaczenie">DLA PACJENTA</div>
+            <ol>
+              <li><a href="Leczenie.html">LECZENIE</a></li>
+              <li><a href="Materialy_Edukacyjne.html">MATERIAŁY EDUKACYJNE</a></li>
+          </ol>
+          </li>
+          <li><a href="Specjalisci.html">SPECJALICI</a></li>
           <li><a href="">HISTORIE PACJENTÓW</a></li>
         </ul>
       </div>
