--- a/Projekt/Leczenie.html
+++ b/Projekt/Leczenie.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="ImgBox-3">
-        <img src="img/shutterstock_1256.png"></img>
+        <img src="img/shutterstock_1256n.png"></img>
       </div>
       <div class="ImgBox-4">
         <img src="img/shutterstock_6916.png"></img>
@@ -71,10 +71,12 @@
         Niestety, przy zastosowaniu podstawowych zaleceń dotyczących modyfikacji stylu życia, cel terapeutyczny osiągamy tylko u niewielkiej grupy pacjentów.
         Pod opieką lekarza, terapię niefarmakologiczną pacjenta można wspomóc wybranymi, skutecznymi lekami. Obecnie na polskim rynku mamy dostępne
         trzy leki ułatwiające redukcję masy ciała.
-        <li>Pierwszy to inhibitor lipaz, hamujący wchłanianie tłuszczu z przewodu pokarmowego.</li>
-        <li>Drugi to połączenie chlorowodorku bupropionu z chlorowodorkiem naltreksonu, które działając na ośrodkowy układ nerwowy, zwiększa uczucie sytości oraz hamuje apetyt. </li>
-        <li>Trzeci – długo wyczekiwany lek z grupy analogów glukagonopodobnego peptydu-1 (GLP-1) – 
-          Liraglutyd, który nie tylko ułatwia redukcję masy ciała, ale również koryguje towarzyszące chorobie zaburzenia metaboliczne.</li>
+        <ul>
+          <li>Pierwszy to inhibitor lipaz, hamujący wchłanianie tłuszczu z przewodu pokarmowego.</li>
+          <li>Drugi to połączenie chlorowodorku bupropionu z chlorowodorkiem naltreksonu, które działając na ośrodkowy układ nerwowy, zwiększa uczucie sytości oraz hamuje apetyt. </li>
+          <li>Trzeci – długo wyczekiwany lek z grupy analogów glukagonopodobnego peptydu-1 (GLP-1) – 
+           Liraglutyd, który nie tylko ułatwia redukcję masy ciała, ale również koryguje towarzyszące chorobie zaburzenia metaboliczne.</li>
+        </ul>
       </div>
 
       <div class="ImgBox-8">
