--- a/Projekt/O_Chorobie.html
+++ b/Projekt/O_Chorobie.html
@@ -85,6 +85,102 @@
               <div class="ImgBox3__path--napis">LISTA ZAMIENNIKÓW ŻYWIENIOWYCH</div>
             </div>
           </div>
+
+          <div class="napisOtylosc">OTYŁOŚĆ - DO CZEGO PROWADZI?</div>
+
+          <div class="BoxKolko1">
+            <div class="BoxKolko1__kolko"></div>
+            <div class="BoxKolko1__text">
+              <div class="BoxKolko1__text BoxKolko1__text--niebieski">Choroby układu krążenia</div>
+              <br>
+              U osób otyłych najczęściej występuje choroba wieńcowa (choroba niedokrwienna serca), miażdżyca, nadciśnienie tętnicze. 
+              Choroba niedokrwienna serca jest diagnozowana u ponad 40 proc. osób otyłych. W porównaniu z osobami o prawidłowej masie ciała, 
+              otyli są o 1,5-krotnie bardziej narażeni na wystąpienie tego schorzenia. Ryzyko zawału serca dla otyłej kobiety jest około trzy 
+              razy wyższe niż dla szczupłej kobiety w tym samym wieku.
+            </div>
+          </div>
+          <div class="BoxKolko1">
+            <div class="BoxKolko1__kolko"></div>
+            <div class="BoxKolko1__text">
+              <div class="BoxKolko1__text BoxKolko1__text--niebieski">Choroby nowotworowe</div>
+              <br>
+              Otyłość jest jednym z czynników ryzyka chorób nowotworowych. U otyłych kobiet rośnie prawdopodobieństwo zachorowania
+              na raka sutka, pęcherzyka żółciowego czy jelita grubego. Mężczyźni są bardziej narażeni na nowotwór prostaty i jelita grubego.
+              U wszystkich otyłych istnieje też wyższe ryzyko raka trzustki i wątroby.
+            </div>
+          </div>
+          <div class="BoxKolko1">
+            <div class="BoxKolko1__kolko"></div>
+            <div class="BoxKolko1__text">
+              <div class="BoxKolko1__text BoxKolko1__text--niebieski">Cukrzyca typu 2</div>
+              <br>
+              Im większa otyłość, tym większe ryzyko rozwoju cukrzycy. Wśród osób chorujących na cukrzycę 80 proc. stanowią ludzie otyli. 
+              Ponad 400 tys. osób co roku zapada na tę chorobę, liczbę chorych liczymy już w milionach. Średnio co 2 h dokonuje 
+              się dużej amputacji związanej z cukrzycą
+            </div>
+          </div>
+          <div class="BoxKolko1">
+            <div class="BoxKolko1__kolko"></div>
+            <div class="BoxKolko1__text">
+              <div class="BoxKolko1__text BoxKolko1__text--niebieski">Schorzenia pęcherzyka żółciowego</div>
+              <br>
+              Schorzenia pęcherzyka żółciowego sześć razy częściej dotyczą osób z nadwagą. Wysokie stężenie cholesterolu w żółci, 
+              a niskie kwasów żółciowych, zwiększa skłonność do tworzenia się kamieni. 
+            </div>
+          </div>
+          <div class="BoxKolko1">
+            <div class="BoxKolko1__kolko"></div>
+            <div class="BoxKolko1__text">
+              <div class="BoxKolko1__text BoxKolko1__text--niebieski">Zaburzenia miesiączkowania</div>
+              <br>
+              Otyłe kobiety często cierpią z powodu zaburzeń cyklu miesiączkowego oraz przedłużonych krwawień. Mają także zaburzenia hormonalne, 
+              które niejednokrotnie utrudniają zajście w ciążę. Ryzyko bezpłodności u otyłych mężczyzn jest podwyższone o 25 proc.
+            </div>
+          </div>
+          <div class="BoxKolko1">
+            <div class="BoxKolko1__kolko"></div>
+            <div class="BoxKolko1__text">
+              <div class="BoxKolko1__text BoxKolko1__text--niebieski">Choroby zwyrodnieniowe stawów</div>
+              <br>
+              Choroby zwyrodnieniowe obciążonych nadwagą stawów, takich jak stawy kolanowe, są bardzo powszechnym powikłaniem nadwagi i otyłości. 
+              Zbyt silny nacisk na stawy prowadzi do uszkodzenia błony wyściełającej stawy. 
+            </div>
+          </div>
+          <div class="GlownyImgBlok">
+            <div class="ImgBlok1">
+              <img src="img/Rectangle-15.png">
+            </div>
+            <div class="ImgBlok2">
+              <img src="img/Rectangle-17.png">
+            </div>
+          </div>
+
+          <div class="napisOtylosc">Epidemiologia – otyłość w liczbach</div>
+          <div class="BlokText">
+            <div class="BlokText__pobocznyNapis">
+              <div class="BlokText__pobocznyNapis BlokText__pobocznyNapis--fioletowy">OECD Health Policy Studies</div>
+              W krajach objętych badaniem OECD (52) liczba osób otyłych z jednej piątej w 2010 r. wzrosła w tym roku (2019 r.) do prawie jednej czwartej, 
+              a w większości krajów ponad połowa osób ma nadwagę. Badanie pokazało, że nadwaga i otyłość skrócą długość życia Polaków o blisko 4 lata.
+              <br>
+              Według badania w najbliższych 30 latach Polska straci na chorobach wywołanych otyłością 4,1 proc. PKB. 
+              Przekładając to do wartości PKB za ostatnie cztery kwartały, wychodzi prawie 3 mld zł rocznie. Każdy z 16,5 mln 
+              pracujących Polaków płaci za leczenie chorób z otyłości 182 zł rocznie.
+              <br>
+              <div class="BlokText__pobocznyNapis BlokText__pobocznyNapis--fioletowy">NCD Risk Factor Collaboration (NCD-RisC) </div>
+              Trzech na pięciu dorosłych Polaków ma nadwagę, a  jeden na czterech jest otyły. Skala tego zjawiska systematycznie rośnie. 
+              Nie ma też co liczyć na poprawę, prognozy nie są optymistyczne — szacuje się, że w 2025 r. otyłych będzie 26% dorosłych kobiet i 30% dorosłych mężczyzn.
+              <br>
+              <div class="BlokText__pobocznyNapis BlokText__pobocznyNapis--fioletowy">WHO</div>
+              Problem nadwagi i otyłości dotyczy już 10 proc. dzieci i młodzieży na świecie. Co więcej, 
+              dzieci w Polsce tyją najszybciej w Europie. Ponad 18% jedenasto - i dwunastolatków ma nadwagę, a przeszło 3% jest otyłych.
+              <br>
+              <div class="BlokText__pobocznyNapis BlokText__pobocznyNapis--fioletowy">NFZ</div>
+              Nadmiar zbędnych kilogramów ma 31% chłopców i 20% dziewczynek. Z otyłością zmaga się już 13% chłopców i 5% dziewczynek.
+            </div>
+          </div>
+          <div class="ImgBlok3">
+           <img src="img/Sax_Hero_Setting_Office_Global_Female_1_Sarah.png">
+          </div>
     </div>
   </body>
 </html>
