--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -44,6 +44,81 @@
           <input type="text" name="odp" size="25" class="kalBMI__opinia" disabled>
       </form>
 
+      <div class="Statystyki">
+          <div class="Statystyki__miejsce">
+            <div class="Statystyki__kolo Statystyki__kolo--zielone"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--zielone"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--zielone"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--zielone"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--fioletowe"></div>
+            <div class="Statystyki__napis">Polacy są już w pierwszej piątce najbardziej otyłych.</div>
+          </div>
+          <div class="Statystyki__kreska"></div>
+          <div class="Statystyki__miejsce">
+            <div class="Statystyki__kolo Statystyki__kolo--niebieskie"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--niebieskie"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--fioletowe"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--fioletowe"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--zielone"></div>
+            <div class="Statystyki__procenty Statystyki__procenty--niebieskie">62%</div>
+            <div class="Statystyki__procenty Statystyki__procenty--fioletowe">51%</div>
+            <div class="Statystyki__procenty Statystyki__procenty--zielone">26%</div>
+            <div class="Statystyki__napis">W Polsce z problemem nadmiernej masy ciała (nadwagą)</div>
+          </div>
+          <div class="Statystyki__kreska"></div>
+          <div class="Statystyki__miejsce">
+            <div class="Statystyki__kolo Statystyki__kolo--zielone"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--zielone"></div>
+            <div class="Statystyki__kolo Statystyki__kolo--zielone"></div>
+            <div class="Statystyki__napis2">Co</div>
+              <div class="Statystyki__napis2 Statystyki__napis2--zielony">czwarty</div>
+              <div class="Statystyki__napis2">Polak</div>
+          </div>
+          <div class="Statystyki__kreska"></div>
+          <div class="Statystyki__miejsce">
+            <div class="Statystyki__napis">Otyłość kosztuje Polskę 
+              <div class="Statystyki__napis Statystyki__napis--niebieski">10 mld zł rocznie z budżetu NFZ i ZUS.</div> 
+              (Choroby będące powikłaniem otyłości - czyli schorzenia układu krążenia i ruchu oraz nowotwory - 
+              pochłaniają 10 mld zł rocznie z budżetu NFZ i ZUS)
+            </div>
+          </div>
+          <div class="Statystyki__kreska"></div>
+          <div class="Statystyki__miejsce">
+            <div class="Statystyki__napis">U kobiet z BMI >35kg/m2 
+              <div class="Statystyki__napis Statystyki__napis--fioletowy">ryzyko zachorowania na cukrzycę wzrasta</div>
+            </div>
+          </div>
+      </div>
+      <div class="TextBlok">
+        <div class="TextBlok__napisPoboczny TextBlok__napisPoboczny--czarny">
+          Otyłość – jedno z największych zagrożeń dla zdrowia XXI wieku, ma bardzo szeroki i dewastujący wpływ na nasze zdrowie, 
+          a liczba osób z nadwagą i otyłością w Polsce systematycznie rośnie. Dla społeczeństwa jest to temat na tyle krępujący i 
+          wstydliwy, że często nie potrafimy go poruszyć. 
+        </div>
+        <br><br>
+        <div class="TextBlok__napisPoboczny TextBlok__napisPoboczny--fioletowyMaly">
+          To powinno się zmienić! „Porozmawiajmy szczerze o otyłości” to kampania, która ma na celu: 
+        </div>
+        <br>
+        <ul class="TextBlok__napisPoboczny">
+          <li>uświadomić, że otyłość to choroba, która wymaga leczenia i kontaktu ze specjalistą,</li>
+          <li>pomóc osobom chorym się otworzyć – bez poczucia stygmatyzacji,</li>
+          <li>zachęcić pacjentów i pracowników służby zdrowia do rozmowy o leczeniu,</li>
+          <li>edukację społeczeństwa, aby nauczyło się poruszać ten delikatny temat i lepiej rozumieć pacjentów.</li>
+        </ul>
+        <br>
+        <div class="TextBlok__napisPoboczny">
+          Ludzie cierpiący na otyłość często spotykają się z brakiem zrozumienia
+          ze strony swojego otoczenia, a mity, które krążą wokół tej choroby, sprawiają,
+         że czują się wykluczeni.
+        </div>
+        <br>
+        <div class="TextBlok__napisPoboczny TextBlok__napisPoboczny--fioletowyDuzy">
+          Nie można bagatelizować otyłości i godzić się z nią, ani pozostawiać 
+          ludzi chorych samych sobie. Jak więc powinniśmy rozmawiaćo otyłości...? Bądź i ucz się razem z nami!
+        </div>
+        <div class="TextBlok__napisGlowny">Otyłość to choroba, którą można leczyć! </div>
+      </div>
     </div>
   </body>
 
